prevent scroll bar from going off screen

--- a/css/myshelf.css
+++ b/css/myshelf.css
@@ -1,6 +1,7 @@
 html, 
 body {
     height: 100%;
+    /*overflow: auto;*/
 }
 
 .container {
@@ -17,11 +18,18 @@ body {
 .sidebar {
     display: table-cell;
     width: 35%;
-    height: 80%;
+    /*height: 80%;*/
     position: fixed;
     overflow: auto;
-    left: 0;
+    top:35%;
+    bottom: 1%;
+    /*box-sizing: border-box;*/
+    max-height: inherit;
+box-sizing:border-box
+/*    left: 0;
     top: 35%;
+    bottom: 1%;*/
+    /*margin-bottom: -10px;*/
 }
 
 .centerbox {
@@ -29,11 +37,12 @@ body {
     text-align: center;
     vertical-align: middle;
     width: 65%;
-    height: 80%;
-    overflow: auto;
+    /*height: 80%;*/
+    overflow-y: auto;
     position: fixed;
     left: 35%;
     top: 35%; 
+    bottom: 1%;
     /*padding: 0rem;*/
 }
 
